remove base and rename home to index

--- a/heart_calculator/templates/index.html
+++ b/heart_calculator/templates/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Calculator Your Heart Health!</h1>
-    <form action="{{ url_for("home_page")}}" method="post">
+    <form action="{{ url_for("index")}}" method="post">
     <ul>
       <li>
         <h5>Select your Age</h5>
