--- a/heart_calculator/templates/index.html
+++ b/heart_calculator/templates/index.html
@@ -4,6 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <style media="screen">
+      .button1 {border-radius: 50%;}
+    </style>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -13,62 +16,66 @@
   <body>
     <h1>Calculator Your Heart Health!</h1>
     <form action="{{ url_for("index")}}" method="post">
-    <ul>
-      <li>
-        <h5>Select your Age</h5>
-        <select name="age">
+      <div class="container">
+        <h5 >Select your Age</h5>
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
           {% for age in age_list %}
-            <option>{{age}}</option>
-          {% endfor %}
-        </select>
-      </li>
+           <label class="btn btn-outline-primary rounded-pill mr-1">
+           <input type="radio" name="age"  id="age" autocomplete="off"> {{age}}
+           </label>
+           {% endfor %}
+        </div>
 
-      <li>
         <h5>Select your Gender</h5>
-        <select name="gender">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
           {% for gender in gender_list %}
-            <option>{{gender}}</option>
-          {% endfor %}
-        </select>
-      </li>
+           <label class="btn btn-outline-primary rounded-pill mr-1">
+           <input type="radio" name="gender" id="gender" autocomplete="off"> {{gender}}
+           </label>
+           {% endfor %}
+        </div>
 
-      <li>
         <h5>Select your Profession</h5>
-        <select name="profession">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
           {% for profession in profession_list %}
-            <option>{{profession}}</option>
-          {% endfor %}
-        </select>
-      </li>
+           <label class="btn btn-outline-primary rounded-pill mr-1">
+           <input type="radio" name="profession" id="profession" autocomplete="off"> {{profession}}
+           </label>
+           {% endfor %}
+        </div>
 
-      <li>
         <h5>Physical Activity</h5>
-        <select name="physical">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
           {% for physical in physical_act_list %}
-            <option>{{physical}}</option>
-          {% endfor %}
-        </select>
-      </li>
+           <label class="btn btn-outline-primary rounded-pill mr-1">
+           <input type="radio" name="physical" id="physical" autocomplete="off"> {{physical}}
+           </label>
+           {% endfor %}
+        </div>
 
-      <li>
         <h5>How often do you eat fried foods and sweats?</h5>
-        <select name="how_often">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
           {% for how_often in how_often_list %}
-            <option>{{how_often}}</option>
-          {% endfor %}
-        </select>
-      </li>
+           <label class="btn btn-outline-primary rounded-pill mr-1">
+           <input type="radio" name="how_often" id="how_often" autocomplete="off"> {{how_often}}
+           </label>
+           {% endfor %}
+        </div>
 
-      <li>
         <h5>Any family history of Diabetes/BP or Heart diease?</h5>
-        <select name="family_history">
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
           {% for family_history in family_history_list %}
-            <option>{{family_history}}</option>
-          {% endfor %}
-        </select>
-      </li>
-    </ul>
-    <button type="submit">Submit</button>
+           <label class="btn btn-outline-primary rounded-pill mr-1">
+           <input type="radio" name="family_history" id="family_history" autocomplete="off"> {{family_history}}
+           </label>
+           {% endfor %}
+        </div>
+
+        <h5>Submit form</h5>
+        <div>
+          <button type="submit" class="btn btn-primary rounded-pill">Submit</button>
+        </div>
+      </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -76,11 +83,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
+
   </body>
   <!-- <style>
     body {
